keycloak-kubelogin-rbac/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity
  labels:
    app.kubernetes.io/name: identity-stack
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
